2008-05-06 Fix strange colors when blitting in QtAgg and Qt4Agg - MGD

2008-05-05 pass notify_axes_change to the figure's add_axobserver
           in the qt backends, like we do for the other backends.
           Thanks Glenn Jones for the report - DSD

2008-05-02 Added step histograms, based on patch by Erik Tollerud. - MM

2008-05-02 On PyQt <= 3.14 there is no way to determine the underlying
           Qt version. [1851364] - MGD

2008-05-02 Don't call sys.exit() when pyemf is not found [1924199] -
           MGD

2008-05-02 Update _subprocess.c from upstream Python 2.5.2 to get a
           few memory and reference-counting-related bugfixes.  See
           bug 1949978. - MGD

2008-04-30 Added some record array editing widgets for gtk -- see
           examples/rec_edit*.py - JDH

2008-04-29 Fix bug in mlab.sqrtm - MM

2008-04-28 Fix bug in SVG text with Mozilla-based viewers (the symbol
           tag is not supported) - MGD

2008-04-27 Applied patch by Michiel de Hoon to add hexbin
           axes method and pyplot function - EF

2008-04-25 Enforce python >= 2.4; remove subprocess build - EF

2008-04-25 Enforce the numpy requirement at build time - JDH

2008-04-24 Make numpy 1.1 and python 2.3 required when importing
           matplotlib - EF

2008-04-24 Fix compilation issues on VS2003 (Thanks Martin Spacek for
           all the help) - MGD

2008-04-24 Fix sub/superscripts when the size of the font has been
           changed - MGD

2008-04-22 Use "svg.embed_char_paths" consistently everywhere - MGD

2008-04-20 Add support to MaxNLocator for symmetric axis autoscaling. - EF

2008-04-20 Fix double-zoom bug. - MM

2008-04-15 Speed up color mapping. - EF

2008-04-12 Speed up zooming and panning of dense images. - EF

2008-04-11 Fix global font rcParam setting after initialization
           time. - MGD

2008-04-11 Revert commits 5002 and 5031, which were intended to
           avoid an unnecessary call to draw(). 5002 broke saving